--- a/src/js/partials/home.html
+++ b/src/js/partials/home.html
@@ -1,1 +1,22 @@
-<h1>Home page</h1>
+<div ui-content-for="title">
+  <span>Home</span>
+</div>
+
+<div class="scrollable" ui-state="searchBar">
+  <input
+  	ng-model="q"
+    type="search"
+    class="form-control scrollable-header"
+    placeholder="Search.." />
+  <div class="scrollable-content" ui-scroll-bottom='bottomReached()'>
+    <div class="list-group">
+
+ 	 <!-- <a ng-repeat="user in users | filter:user.q " href="#" class="list-group-item"> -->
+ 	 <a ng-repeat="user in users | filter:q" href="#" class="list-group-item">
+        {{ user.password.email }}<i class="fa fa-chevron-right pull-right"></i>
+      </a>
+    </div>
+  </div>
+
+
+</div>
