--- a/src/js/partials/home.html
+++ b/src/js/partials/home.html
@@ -9,11 +9,13 @@
     class="form-control scrollable-header"
     placeholder="Search.." />
   <div class="scrollable-content" ui-scroll-bottom='bottomReached()'>
-    <div class="list-group">
 
+    <p ng-show="loading" class="text-center loading-home"><img src="/images/home_loading.gif"></p>
+
+    <div class="list-group">
  	 <!-- <a ng-repeat="user in users | filter:user.q " href="#" class="list-group-item"> -->
- 	 <a ng-repeat="user in users | filter:q" href="#" class="list-group-item">
-        {{ user.password.email }}<i class="fa fa-chevron-right pull-right"></i>
+ 	    <a ng-repeat="user in users | filter:q" href="#/chat/{{user.uid}}-{{userLogged.uid}}" class="list-group-item" >
+        {{ user.password.email }} <i class="fa fa-chevron-right pull-right"></i>
       </a>
     </div>
   </div>
