--- a/src/js/partials/chat.html
+++ b/src/js/partials/chat.html
@@ -7,6 +7,7 @@
                
                 </div>
                 <div class="panel-body" id="wrapper-messages">
+                    <p ng-show="loading" class="text-center loading-home"><img src="/images/home_loading.gif"></p>
                     <ul class="chat">
 
                         <li class="left clearfix" ng-repeat="chat in chats">
@@ -15,8 +16,11 @@
                             </span>
                             <div class="chat-body clearfix">
                                 <div class="header">
-                                    <strong class="primary-font">{{ chat.from }}</strong> <small class="pull-right text-muted">
-                                        <span class="glyphicon glyphicon-time"></span>{{ chat.date }}</small>
+                                    <strong class="primary-font">{{ chat.from }}</strong> 
+                                    <small class="pull-right text-muted">
+                                        <span class="glyphicon glyphicon-time"></span>
+                                        <span am-time-ago="chat.date"></span>
+                                    </small>
                                 </div>
                                 <p>
                                     {{ chat.message }}
@@ -44,13 +48,16 @@
                     </ul>
                 </div>
                 <div class="panel-footer chat-footer">
-                    <div class="input-group">
-                        <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." ng-model="message">
-                        <span class="input-group-btn">
-                            <button class="btn btn-warning btn-sm" id="btn-chat" ng-click="sendChat()">
-                                Send</button>
-                        </span>
-                    </div>
+                    <form ng-submit="sendChat()">
+                        <div class="input-group">
+                                <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." ng-model="message">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-warning btn-sm" id="btn-chat">
+                                        Send</button>
+                                </span>
+                            
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
