--- a/src/js/partials/register.html
+++ b/src/js/partials/register.html
@@ -15,6 +15,15 @@
 
   <form role="form" ng-submit='doRegister()'>
     <fieldset>
+       <div class="form-group has-success has-feedback">
+          <label>Username</label>
+          <input type="text"
+                 ng-model="username"
+                 class="form-control"
+                 placeholder="Enter username"
+                 required>
+        </div>
+
         <div class="form-group has-success has-feedback">
           <label>Email</label>
           <input type="email"
