--- a/css/styles.css
+++ b/css/styles.css
@@ -81,3 +81,14 @@
     bottom: 0;
     position: fixed;
 }
+
+.notification{
+    background: red;
+    margin-top: 8px;
+    position: absolute !important;
+    margin-left: -8px;
+}
+
+.sidebar-right{
+    background: white;
+}
